# compi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compi.cbp  compi.depend  compi.layout  compi.map  profile
config/: compi.ini
include/: agentthread.h  compi.h  fftcompare.h  hash.h  inimanager.h  inisection.h  logtofile.h  minuscompare.h  recorder.h  spectrumcompare.h  troughcompare.h  utils.h
src/: agentthread.cpp  compi.cpp  fftcompare.cpp  hash.cpp  inimanager.cpp  inisection.cpp  logtofile.cpp  main.cpp  mibwritabletable.cpp  minuscompare.cpp  recorder.cpp  spectrumcompare.cpp  troughcompare.cpp  utils.cpp
